--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ name: terraform-infrastructure
 environment:
   ### -----------------------
   ### Find and Replace
-  TF_VAR_app_name: tfmultienv
+  TF_VAR_app_name: salu2multienv
   TF_VAR_region: &AWS_REGION us-east-1
   ### -----------------------
   AWS_REGION: *AWS_REGION
